<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/theme_color" >

        <ImageButton
            android:id="@+id/carddetail_back"
            android:layout_width="@dimen/common_title_bar_icon_width"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_common_title_bar_btn"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_common_title_bar_back" />

        <TextView
            android:id="@+id/carddetail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/carddetail_title"
            android:textColor="@color/black"
            android:textSize="@dimen/common_title_text_size" />

    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView 
            android:id="@+id/carddetail_card_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/example1"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carddetail_range"
            android:text="@string/carddetail_range"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/common_title_text_size"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carddetail_holder"
            android:text="@string/carddetail_holder"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/common_title_text_size"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carddetail_balance"
            android:text="@string/carddetail_balance"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/common_title_text_size"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carddetail_credits"
            android:text="@string/carddetail_credits"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/common_title_text_size"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carddetail_number"
            android:text="@string/carddetail_number"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/common_title_text_size"/>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/carddetail_phone"
            android:id="@+id/carddetail_phone"
            android:drawableTop="@drawable/phone"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/carddetail_charge"
            android:id="@+id/carddetail_charge"
            android:drawableTop="@drawable/charge"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/carddetail_logout"
            android:id="@+id/carddetail_logout"
            android:drawableTop="@drawable/logout"/>
    </LinearLayout>
</LinearLayout>
