<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/theme_color" >

        <ImageButton
            android:id="@+id/applycard_back"
            android:layout_width="@dimen/common_title_bar_icon_width"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_common_title_bar_btn"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_common_title_bar_back" />

        <TextView
            android:id="@+id/applycard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/applycard_title"
            android:textColor="@color/black"
            android:textSize="@dimen/common_title_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/applycard_name_input"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginBottom="3dp"
            android:hint="@string/applycard_name_input_hint" />

        <EditText
            android:id="@+id/applycard_phone_input"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginBottom="3dp"
            android:hint="@string/applycard_phone_input_hint"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/applycard_vcode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/applycard_vcode_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/applycard_vcode_get"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="@dimen/line_margin_side"
        android:layout_marginRight="@dimen/line_margin_side"
        android:background="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/applycard_what_type"
        android:textColor="@color/sub_list"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/applycard_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp" >
    </ListView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:attr/detailsElementBackground" >

        <Button
            android:id="@+id/applycard_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/applycard_done" />
    </FrameLayout>

</LinearLayout>