<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/theme_color" >

        <ImageButton
            android:id="@+id/personinfo_back"
            android:layout_width="@dimen/common_title_bar_icon_width"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_common_title_bar_btn"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_common_title_bar_back" />

        <TextView
            android:id="@+id/personinfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personinfo_title"
            android:textColor="@color/black"
            android:textSize="@dimen/common_title_text_size" />

    </RelativeLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personinfo_pic"
            android:background="@drawable/contact_default_pic"/>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/black"
        android:layout_marginLeft="@dimen/line_margin_side"
        android:layout_marginRight="@dimen/line_margin_side"
        android:layout_marginTop="@dimen/line_margin_updown"
        android:layout_marginBottom="@dimen/line_margin_updown"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personinfo_name"
            android:layout_marginTop="5dp"
            android:text="@string/personinfo_name"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personinfo_account"
            android:layout_marginTop="5dp"
            android:text="@string/personinfo_account"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personinfo_gender"
            android:layout_marginTop="5dp"
            android:text="@string/personinfo_gender"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personinfo_donate_btn"
            android:text="@string/donate_to_sb"/>
    </LinearLayout>
</LinearLayout>
