<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/theme_color" >

        <ImageButton
            android:id="@+id/contacts_back"
            android:layout_width="@dimen/common_title_bar_icon_width"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_common_title_bar_btn"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_common_title_bar_back" />

        <TextView
            android:id="@+id/contacts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contacts_title"
            android:textColor="@color/black"
            android:textSize="@dimen/common_title_text_size" />

    </RelativeLayout>

     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/gray"
         android:gravity="center_vertical" 
         android:textSize="20sp"
         android:id="@+id/contacts_add_friends"
         android:text="@string/contacts_add_friends"
         android:drawableLeft="@drawable/add_new_friend"/>
     <ListView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/contacts_listview">
         
     </ListView>
</LinearLayout>
