<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/theme_color" >

        <ImageButton
            android:id="@+id/businessdetail_back"
            android:layout_width="@dimen/common_title_bar_icon_width"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_common_title_bar_btn"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_common_title_bar_back" />

        <TextView
            android:id="@+id/businessdetail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/common_title_text_size" />

        <ImageButton
            android:id="@+id/businessdetail_ticket"
            android:layout_width="@dimen/common_title_bar_icon_width"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_common_title_bar_btn"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ticket" />
    </RelativeLayout>

    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/business_info_pic"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingLeft="2dp"
        android:paddingBottom="3dp"
        android:paddingRight="2dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_weight="1">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/business_grade"
                android:textSize="16sp"
                android:id="@+id/business_grade"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/business_phone"
                android:textSize="16sp"
                android:id="@+id/business_phone"/>
        </LinearLayout>
        <ImageView 
            android:id="@+id/business_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/launch_map_icon"/>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/gray"
        android:layout_marginLeft="@dimen/line_margin_side"
        android:layout_marginRight="@dimen/line_margin_side"
        android:layout_marginTop="@dimen/line_margin_updown"
        android:layout_marginBottom="@dimen/line_margin_updown"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:textColor="@color/sub_list"
        android:text="@string/businesdetail_details"/>
</LinearLayout>
